--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,8 @@
     <string name="next">بعدی</string>
     <string name="start">شروع</string>
     <string name="forget">بازیابی رمزورود</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
+
 
 </resources>
