sporttests activity1 and sporttest

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="done">تایید</string>
     <string name="new_sp_finish_time_hint">چه زمانی این ورزش تموم میشه؟</string>
     <string name="remove">حذف</string>
+    <string name="activity_sporttests_title">تست های ورزشی</string>
 </resources>
