Adding Sport Plan

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,9 +26,7 @@
     <string name="action_sign_in_short">ورود</string>
     <string name="error_invalid_email">پست الکترونیک وارد شده نامعتبر است</string>
     <string name="error_invalid_password">رمز ورود وارد شده نامعتبر است</string>
-    <string name="error_incorrect_password">رمز وارد شده نادرست است</string>
     <string name="error_field_required">وارد کردن این گزینه اجباری است</string>
-    <string name="permission_rationale">"دسترسی به مخاطبان جهت تکمیل خودکار پست الکترونیک به کار می رود."</string>
     <string name="loginq">حساب کاربری داری؟</string>
     <string name="loginLink">وارد شو</string>
     <string name="login_error">رمزورود وارد شده اشتباه است و یا کاربری با این پست الکترونیک وجود ندارد.</string>
@@ -51,12 +49,10 @@
     <!-- Strings related activity_new_sportplan -->
     <string name="activity_new_sportplan_title">برنامه ورزشی جدید</string>
     <string name="new_sp_time_hint">چه زمانی این ورزش شروع میشه؟</string>
-    <string name="tag_field_title">تگ رنگی</string>
 
     <!-- Strings related activity_profile -->
     <string name="name">نام</string>
     <string name="Lname">نام خانوادگی</string>
-    <string name="chang">تغییر</string>
     <string name="height">قد</string>
     <string name="weight">وزن</string>
     <string name="city">شهر</string>
@@ -71,4 +67,8 @@
     <string name="new_sp_finish_time_hint">چه زمانی این ورزش تموم میشه؟</string>
     <string name="remove">حذف</string>
     <string name="activity_sporttests_title">تست های ورزشی</string>
+    <string name="new_sp_btn">اضافه کردن برنامه جدید</string>
+    <string name="new_sport_btn">اضافه کردن ورزش جدید</string>
+    <string name="new_rest_btn">استراحت</string>
+    <string name="startPlan">شروع برنامه</string>
 </resources>
