Make Massages and SportTests dynamic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,6 @@
     <string name="five_minutes">5</string>
     <string name="ten_minutes">10</string>
     <string name="rest">استراحت</string>
+    <string name="medium">متوسط</string>
+    <string name="hard">سخت</string>
 </resources>
