--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,10 +23,14 @@
     <string name="action_sign_in">ورود</string>
     <string name="action_sign_up">ثبت نام</string>
     <string name="action_retrieve">بازیابی</string>
+    <string name="action_retrieve_request">درخواست ارسال کد بازیابی</string>
     <string name="action_sign_in_short">ورود</string>
     <string name="error_invalid_email">پست الکترونیک وارد شده نامعتبر است</string>
     <string name="error_invalid_password">رمز ورود وارد شده نامعتبر است</string>
+    <string name="error_empty_password">رمز ورودی وارد نشده است</string>
+    <string name="error_invalid_confirm_password">تکراری رمز ورود با رمز ورود وارده شده مطابقت ندارد</string>
     <string name="error_field_required">وارد کردن این گزینه اجباری است</string>
+
     <string name="loginq">حساب کاربری داری؟</string>
     <string name="loginLink">وارد شو</string>
     <string name="login_error">رمزورود وارد شده اشتباه است و یا کاربری با این پست الکترونیک وجود ندارد.</string>
@@ -83,4 +87,7 @@
     <string name="medium">متوسط</string>
     <string name="hard">سخت</string>
     <string name="account_info_title">اطلاعات حساب کاربری</string>
+    <string name="change_password_title">تغییر رمز ورود</string>
+    <string name="verify_code_hint">کد بازیابی رمز ارسال شده به پست الکترونیک</string>
+    <string name="email_not_found">ارتباط برقرار نشد یا پست الکترونیک مورد نظر یافت نشد</string>
 </resources>
